--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "request": "^2.88.2",
     "request-ip": "^3.3.0",
     "sendotp": "^1.2.9",
+    "socket.io": "^4.7.4",
     "twilio": "^5.0.0-rc.1"
   }
 }
